# video-use

./: .env.example  README.md  pyproject.toml
docs/: vidparse-backend.md
docs/superpowers/plans/: 2026-04-23-vidparse-swap-plan.md
docs/superpowers/specs/: 2026-04-23-vidparse-swap-design.md
helpers/: transcribe.py
tools/: README.md  parity_harness.py  smoke_vidparse_backend.py
